<resources>
    <string name="app_name">Hatchat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="write">New chat</string>
    <string name="chats">Your chats</string>
    <string name="friends">Contacts</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="hint">Write a message...</string>
    <string name="welcome">Welcome to Hatchat!\nTo start, please press\nthe button below.</string>
    <string name="add_friends">Please select at least 15 friends to add to your Hat!</string>
    <string name="friends_limit">/15 All contacts</string>
    <string name="done">DONE</string>
    <string name="add_new_friends">Add friends</string>
    <string name="search_contacts">Search contacts..</string>
    <string name="search_chats">Search chats..</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_write_new_message">WriteNewMessageActivity</string>
    <string name="title_activity_chats">ChatsActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="title_activity_add_new_friends">AddNewFriendsActivity</string>
    <string name="title_activity_speech_bubble">SpeechBubbleActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
